--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 streamlit
-
-llama-index
-llama-index-core
-
 python-dotenv
 PyMuPDF
+llama-index
+llama-index-core
 llama-index-llms-google-genai
 llama-index-embeddings-google-genai
-
+protobuf==4.25.3
