--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit
 python-dotenv
 PyMuPDF
-llama-index
-llama-index-core
-llama-index-llms-google-genai
-llama-index-embeddings-google-genai
 protobuf==4.25.3
+llama-index==0.14.7
+llama-index-core==0.14.7
+llama-index-llms-gemini
+llama-index-embeddings-gemini
